force-app/main/default/objects/ERP_Adjustment_Detail__c/ERP_Adjustment_Detail__c.object-meta.xml
<CustomObject>
    <description>Invoice Adjustments in the ERP system</description>
    <label>ERP Adjustment Detail</label>
    <nameField>
        <displayFormat>AD-{YYYY}{MM}-{0}</displayFormat>
        <label>ERP Adjustment Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Adjustment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>