force-app/main/default/objects/ERP_Adjustment_Detail__c/fields/Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount__c</fullName>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>