force-app/main/default/objects/ERP_Adjustment_Detail__c/fields/Adjustment_Number__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Number__c</fullName>
    <label>Adjustment Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>