force-app/main/default/objects/ERP_Adjustment_Detail__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>