force-app/main/default/objects/ERP_Adjustment_Detail__c/fields/Adjustment_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Transaction_Type__c</fullName>
    <label>Adjustment Transaction Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>