force-app/main/default/objects/ERP_Adjustment_Detail__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>ERP Adjustment Details</relationshipLabel>
    <relationshipName>ERP_Adjustment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>