force-app/main/default/objects/ERP_Adjustment_Detail__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>ERP Adjustment Details</relationshipLabel>
    <relationshipName>ERP_Adjustment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>