force-app/main/default/objects/ERP_Adjustment_Detail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>ERP Adjustment Details</relationshipLabel>
    <relationshipName>ERP_Adjustment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>