force-app/main/default/objects/ERP_Adjustment_Detail__c/fields/Revenue_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Accrual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Accrual</label>
    <referenceTo>Revenue_Accrual__c</referenceTo>
    <relationshipLabel>ERP Adjustment Details</relationshipLabel>
    <relationshipName>ERP_Adjustment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>